<resources>
    <string name="app_name">Tracker</string>

    <string name="about_version_label">Version</string>
    <string name="about_copyright_label">Copyright</string>
    <string name="about_copyright">2017 - Marc Symonds</string>

    <string name="title_activity_settings">Settings</string>

    <string name="enable">Enable</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_activity_tracked_item_list">Tracked Items</string>

    <string name="button">Button</string>

    <string name="action_settings">Settings</string>

    <string name="name">Name</string>
    <string name="select">Select</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="select_all">Select All</string>
    <string name="add">Add</string>
    <string name="device_type">Device Type</string>
    <string name="device">Device</string>
    <string name="details">Details</string>
    <string name="colour">Colour</string>
    <string name="ping">Ping</string>
    <string name="enabled">Enabled</string>
    <string name="save">Save</string>
    <string name="country_code">Country Code</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="ping_command">Ping Command</string>
    <string name="number_of_expected_responses">Number of Expected Responses</string>
    <string name="seconds_between_responses">Seconds Between Responses</string>
    <string name="seconds_between_resends">Seconds Between Automatic Resends</string>
    <string name="auto_resend_ping_cmd">Automatically Resend Ping Command</string>

    <string name="pinging">Pinging</string>
    <string name="following">Following</string>
    <string name="follow_my_location">Follow my location</string>

    <string name="delete_selected_items">Delete selected items</string>
    <string name="delete_selected_items_title">Delete Selected Items?</string>
    <string name="delete_selected_items_message">Are you sure that you want to delete the selected items?</string>

    <string name="title_activity_tracked_item_entry">Tracked Item</string>

    <string name="tracked_item_name_hint">Name for Tracked Item</string>
    <string name="tracked_item_telephone_country_code_hint">Country calling code</string>
    <string name="tracked_item_telephone_number_hint">Telephone number of device</string>
    <string name="tracked_item_ping_command_hint">SMS message to send to device</string>
    <string name="tracked_item_colour_summary">Colour of marker displayed on map</string>

    <string name="tracked_item_enable_on">Tracked item is visible on map and can be pinged</string>
    <string name="tracked_item_enable_off">Tracked item is not visible on map and can\'t be pinged</string>

    <string name="tracked_item_auto_ping_on">The Ping Command will be automatically sent again after time specified below</string>
    <string name="tracked_item_auto_ping_off">The Ping Command will not automatically be resent</string>
</resources>
