<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:visible="true"
        android:id="@+id/menu_tracked_item_list_group_main">
        <item
            android:id="@+id/menu_tracked_item_list_add"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/add"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />
        <item
            android:id="@+id/menu_tracked_item_list_select"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/select"
            app:showAsAction="never" />
    </group>
    <group android:id="@+id/menu_tracked_item_list_group_select"
        android:visible="false">
        <item
            android:id="@+id/menu_tracked_item_list_select_cancel"
            android:title="@string/cancel"
            app:showAsAction="always" />
        <item
            android:id="@+id/menu_tracked_item_list_select_all"
            android:icon="?android:attr/actionModeSelectAllDrawable"
            android:title="@string/select_all"
            app:showAsAction="always" />
        <item
            android:id="@+id/menu_tracked_item_list_select_delete"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/delete"
            app:showAsAction="always" />
    </group>
</menu>